add script for end to end tests

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:login": "npm run build && mocha --require source-map-support/register 'dist/tests/login.test.js'",
     "test:products": "npm run build && mocha --require source-map-support/register 'dist/tests/products.test.js'",
     "test:cart": "npm run build && mocha --require source-map-support/register 'dist/tests/cart.test.js'",
+    "test:e2e": "npm run build && mocha --require source-map-support/register 'dist/tests/e2e.test.js'",
     "test:chrome": "npm run build && BROWSER=chrome mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
     "test:firefox": "npm run build && BROWSER=firefox mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
     "test:headless": "npm run build && HEADLESS=true mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
