--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "chai": "^4.4.1",
     "csv-parse": "^5.5.3",
+    "dotenv": "^17.2.3",
     "mocha": "^10.2.0",
     "selenium-webdriver": "^4.16.0"
   },
