add cross-env package for cross-platform env variable support and update the scripts for easy reporting

--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "clean": "rimraf dist reports/screenshots && del /s /q \"reports\\*.html\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "test": "npm run build && mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
-    "test:login": "npm run build && mocha --require source-map-support/register 'dist/tests/login.test.js'",
-    "test:products": "npm run build && mocha --require source-map-support/register 'dist/tests/products.test.js'",
-    "test:cart": "npm run build && mocha --require source-map-support/register 'dist/tests/cart.test.js'",
-    "test:e2e": "npm run build && mocha --require source-map-support/register 'dist/tests/e2e.test.js'",
-    "test:chrome": "npm run build && BROWSER=chrome mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
-    "test:firefox": "npm run build && BROWSER=firefox mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
-    "test:headless": "npm run build && HEADLESS=true mocha --require source-map-support/register 'dist/tests/**/*.test.js'",
-    "test:parallel": "npm run build && mocha --require source-map-support/register --parallel 'dist/tests/**/*.test.js'",
+    "test": "npm run build && cross-env NODE_ENV=test mocha",
+    "test:login": "npm run build && cross-env NODE_ENV=test mocha 'dist/tests/login.test.js'",
+    "test:products": "npm run build && cross-env NODE_ENV=test mocha 'dist/tests/products.test.js'",
+    "test:cart": "npm run build && cross-env NODE_ENV=test mocha 'dist/tests/cart.test.js'",
+    "test:e2e": "npm run build && cross-env NODE_ENV=test mocha 'dist/tests/e2e.test.js'",
+    "test:chrome": "npm run build && cross-env BROWSER=chrome NODE_ENV=test mocha",
+    "test:firefox": "npm run build && cross-env BROWSER=firefox NODE_ENV=test mocha",
+    "test:headless": "npm run build && cross-env HEADLESS=true NODE_ENV=test mocha",
+    "test:parallel": "npm run build && cross-env NODE_ENV=test mocha --parallel",
     "pretest": "npm run build"
   },
   "keywords": [],
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "chai": "^4.4.1",
+    "cross-env": "^10.1.0",
     "csv-parse": "^5.5.3",
     "dotenv": "^17.2.3",
     "mocha": "^10.2.0",
